Added support for executing Apache Spark (provisional implementation)